; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action.c_unregister_mods.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_action.c_unregister_mods.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unregister_mods(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i64, i64* %2, align 8
  %7 = call i32 @del_mods(i64 %6)
  %8 = call i32 (...) @send_keyboard_report()
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @del_mods(i64) #1

declare dso_local i32 @send_keyboard_report(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
